apps/clusters/prod/apps/bluemap/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: bluemap-web
  namespace: bluemap
spec:
  selector: { app: bluemap-web }
  ports:
    - port: 80
      targetPort: 8080
