apps/clusters/prod/apps/bluemap/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bluemap
  namespace: bluemap
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/whitelist-source-range: "${ALLOWED_CIDRS}"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth              # Secret mit key "auth"
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
    nginx.ingress.kubernetes.io/satisfy: "any"
spec:
  rules:
    - host: bluemap.apps.onelitefeather.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bluemap-web
                port:
                  number: 80
  tls:
    - hosts:
       - bluemap.apps.onelitefeather.dev
      secretName: bluemap-apps-onelitefeather-dev-tls
